; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/i386/extr_pe_serial.c_pcie_mmio_uart_probe.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/i386/extr_pe_serial.c_pcie_mmio_uart_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"pcie_mmio_uart\00", align 1
@pcie_mmio_uart_base = common dso_local global i32 0, align 4
@PCIE_MMIO_UART_BASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pcie_mmio_uart_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcie_mmio_uart_probe() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = call i64 @PE_parse_boot_argn(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32* %2, i32 4)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i32, i32* %2, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %5
  store i32 0, i32* %1, align 4
  br label %17

9:                                                ; preds = %5
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* @pcie_mmio_uart_base, align 4
  store i32 1, i32* %1, align 4
  br label %17

11:                                               ; preds = %0
  %12 = load i32, i32* @PCIE_MMIO_UART_BASE, align 4
  store i32 %12, i32* @pcie_mmio_uart_base, align 4
  %13 = call i64 (...) @pcie_mmio_uart_present()
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i32 1, i32* %1, align 4
  br label %17

16:                                               ; preds = %11
  store i32 0, i32* %1, align 4
  br label %17

17:                                               ; preds = %16, %15, %9, %8
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i64 @PE_parse_boot_argn(i8*, i32*, i32) #1

declare dso_local i64 @pcie_mmio_uart_present(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
